syntax = "proto3";

package resource;

option go_package = "shared/proto/resource;resource";

service ResourceService {
    rpc GetNearbyResources (GetResourcesRequest) returns (GetResourcesResponse);
}

message GetResourcesRequest {
    Coordinates location = 1;
    int64 within = 2;
}

message GetResourcesResponse {
    repeated Resource resources = 1;
}

message Coordinates {
    double longitude = 1;
    double latitude = 2;
}

message Resource {
    string id = 1;
    string name = 2;
    string amenity_type = 3;
    Coordinates location = 4;
}